@@ -34,6 +34,10 @@
      [misc.h]
      reorder so prototypes are sorted by the files they refer to; no
      binary change
+   - djm@cvs.openbsd.org 2006/08/18 13:54:54
+     [gss-genr.c ssh-gss.h sshconnect2.c]
+     bz #1218 - disable SPNEGO as per RFC4462; diff from simon AT sxw.org.uk
+     ok markus@
 
 20060817
  - (dtucker) [openbsd-compat/fake-rfc2553.c openbsd-compat/setproctitle.c]
@@ -5255,4 +5259,4 @@
    - (djm) Trim deprecated options from INSTALL. Mention UsePAM
    - (djm) Fix quote handling in sftp; Patch from admorten AT umich.edu
 
-$Id: ChangeLog,v 1.4493 2006/08/18 14:33:05 djm Exp $
+$Id: ChangeLog,v 1.4494 2006/08/18 14:33:34 djm Exp $
